# game-basecode

./: CMakeLists.txt  Makefile
resources/: shader1.glsl
src/: ImageManager.cpp  ImageManager.h  Includes.h  Input.cpp  Input.h  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h  Utility.cpp  Utility.h  common.h  main.cpp
